# Jaay-Baan

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  install.sh  podman-compose.yml
BackEnd/: .env.example  API_DOCS.md  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.system-deps  README.md  SECURITY_HARDENING.md  pyproject.toml  start.sh
BackEnd/jaaybaanbackend/: manage.py
BackEnd/jaaybaanbackend/authentication/: README.md  apps.py  tests.py  urls.py  views.py
BackEnd/jaaybaanbackend/authentication/management/commands/: generate_token.py
BackEnd/jaaybaanbackend/items/: admin.py  models.py
BackEnd/jaaybaanbackend/items/migrations/: 0001_initial.py
BackEnd/jaaybaanbackend/jaaybaanbackend/: asgi.py  health.py  settings.py  settings_prod.py  urls.py  urls_prod.py  wsgi.py
BackEnd/jaaybaanbackend/jaaybaanbackend/settings/: base.py  development.py  production.py
BackEnd/jaaybaanbackend/locations/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
BackEnd/jaaybaanbackend/locations/management/commands/: create_sample_data.py
BackEnd/jaaybaanbackend/locations/migrations/: 0001_initial.py  0002_alter_location_location_type.py  0003_location_barcode_location_is_container_and_more.py  0004_location_cleaned_duration_location_cleaned_time.py  0005_alter_location_cleaned_time.py  0006_alter_locationimage_image.py  0007_alter_locationimage_image.py  0008_alter_locationimage_image.py  0009_location_locations_l_path_335167_idx_and_more.py
FrontEnd/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+48 files in other folders)
